@@ -7,6 +7,7 @@ New features:
 ..F....... [ZBX-1357] updated Czech, French, German, Greek, Japanese, Polish, Russian, Spanish and Turkish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-4110] renamed 'password' to 'Key passphrase' in action form (Vedmak)
 ..F....... [ZBX-4686] fixed the "change" link not being accessible for graph type screen items in embeded screens (Pavels)
 ..F....... [ZBX-4836] fixed undefined variables in actionconf.php when trying add Maintenance status; fixed some random ordering for conditions (Toms)
 ..F....... [ZBX-4829] fixed incorrect redirect in 'insert trigger' popup in trigger expression builder (Vedmak)
